This revision fixes several bugs in the menu and text input controls as well as includes more cross-browser consistency. The fixes include: [1] the text input control wrapper <div> is now displaying inline-table, instead of inline-block for better inline performance, [2] the menu now adds a scrollbar only when necessary, unlike before where a disabled scrollbar was present whenever it was not needed, [3] jQuery now listens for current and any future menus that are added to the DOM and opens them as if they were there when the document was loaded, and [4] vendor-specific box-shadows were added to the menu CSS for more cross-browser consistency.

--- a/stylesheets/delfini.all.css
+++ b/stylesheets/delfini.all.css
@@ -572,14 +572,18 @@ ul.dropdown li.selected {
 }
 
 ul.dropdown.open {
+	-moz-box-shadow: 0 0 5px #000000;
+	-ms-box-shadow: 0 0 5px #000000;
+	-o-box-shadow: 0 0 5px #000000;
+	-webkit-box-shadow: 0 0 5px #000000;
 	background-color: #CCCCCC;
-	background-image: url(../images/menu/arrow_down.png);
+	background-image: none;
 	background-image: -moz-linear-gradient(0% 90% 90deg, #CCCCCC, #FFFFFF);
 	background-image: -ms-linear-gradient(#FFFFFF, #CCCCCC);
 	background-image: -o-linear-gradient(#FFFFFF, #CCCCCC);
 	background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#FFFFFF), to(#CCCCCC));
-	background-image: url(../images/menu/arrow_down.png), -webkit-gradient-linear(#FFFFFF, #CCCCCC);
-	background-image: url(../images/menu/arrow_down.png), linear-gradient(#FFFFFF, #CCCCCC);
+	background-image: -webkit-gradient-linear(#FFFFFF, #CCCCCC);
+	background-image: linear-gradient(#FFFFFF, #CCCCCC);
 	border: 1px solid #999999;
 	border-radius: 3px;
 	box-shadow: 0 0 5px #000000;
@@ -591,7 +595,7 @@ ul.dropdown.open {
 	font-weight: bolder;
 	outline: none;
 	overflow-x: hidden;
-	overflow-y: scroll;
+	overflow-y: auto;
 	max-height: 500px;
 	padding: 5px 23px 5px 10px;
 }
@@ -626,7 +630,7 @@ ul.dropdown.open li:hover {
 
 div.inputWrapper {
 	border-radius: 5px;
-	display: inline-block;
+	display: inline-table;
 	position: relative;
 	width: 202px;
 }
