--- a/stylesheets/delfini.textinput.css
+++ b/stylesheets/delfini.textinput.css
@@ -34,7 +34,7 @@
 
 div.inputWrapper {
 	border-radius: 5px;
-	display: inline-block;
+	display: inline-table;
 	position: relative;
 	width: 202px;
 }
